# Ace

./: .travis.yml  CMakeLists.txt  README.md  buildSource.sh  buildTest.sh
doc/: Doxyfile
doc/html/: _all_system_exceptions_8h.html  _all_system_exceptions_8h__dep__incl.map  _all_system_exceptions_8h__dep__incl.md5  _all_system_exceptions_8h__incl.map  _all_system_exceptions_8h__incl.md5  _all_system_exceptions_8h_source.html  _client_8h.html  _client_8h__incl.map  _client_8h__incl.md5  _client_8h_source.html  _connection_status_8h.html  _connection_status_8h__dep__incl.map  _connection_status_8h__dep__incl.md5  _connection_status_8h__incl.map  _connection_status_8h__incl.md5  _connection_status_8h_source.html  _exception_creator_8h.html  _exception_creator_8h__dep__incl.map  _exception_creator_8h__dep__incl.md5  _exception_creator_8h__incl.map  _exception_creator_8h__incl.md5  _exception_creator_8h_source.html  _function_headers_8h.html  _function_headers_8h__dep__incl.map  (+805 more)
include/: Client.h  ConnectionStatus.h  ExceptionCreator.h  FunctionHeaders.h  GenHeader.h  GeneralDefines.h  GlobalConstants.h  IP.h  InternetSocket.h  OS.h  PlatformHeader.h  Port.h  STLHeader.h  Server.h  SocketFileDescriptor.h  SocketStructure.h  StructHeader.h  baseDataBuffer.h  baseGateway.h  baseSocket.h  typedefs.h
src/: Client.cpp  ConnectionStatus.cpp  ExceptionCreator.cpp  IP.cpp  InternetSocket.cpp  OS.cpp  Port.cpp  Server.cpp  SocketFileDescriptor.cpp  SocketStructure.cpp  baseDataBuffer.cpp  baseGateway.cpp  baseSocket.cpp
tests/: CMakeLists.txt  aClient.cpp  aServer.cpp  aServerAndaClient.cpp
tests/src/: baseClientTEST.cpp  baseGatewayTEST.cpp  baseServerTEST.cpp  baseSocketTEST.cpp  main.cpp
(+395 files in other folders)
